scripts/nullness/original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8.txt
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ChoicePanel.java:43: error: [initialization.fields.uninitialized] the constructor does not initialize fields: _generatorBox, _classBox, _raceBox, _levelSpinner, _raceListener, _classListener, _classLock, _raceLock
    public ChoicePanel(Character c) {
           ^
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ChoicePanel.java:47: error: [method.invocation] call to loadPanel() not allowed on the given receiver.
        loadPanel();
                 ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull ChoicePanel
  required: @Initialized @NonNull ChoicePanel
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ChoicePanel.java:48: error: [method.invocation] call to setupPanel() not allowed on the given receiver.
        setupPanel();
                  ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull ChoicePanel
  required: @Initialized @NonNull ChoicePanel
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ChoicePanel.java:49: error: [method.invocation] call to attachListeners() not allowed on the given receiver.
        attachListeners();
                       ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull ChoicePanel
  required: @Initialized @NonNull ChoicePanel
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/Character.java:49: error: [initialization.fields.uninitialized] the constructor does not initialize fields: _attributes
    public Character() {
           ^
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/Character.java:136: error: [argument] incompatible argument for parameter arg0 of ActionListener.actionPerformed.
            al.actionPerformed((ActionEvent) null);
                               ^
  found   : @FBCBottom @Nullable ActionEvent
  required: @Initialized @NonNull ActionEvent
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ResultPanel.java:23: error: [initialization.fields.uninitialized] the constructor does not initialize fields: _strengthValue, _dexterityValue, _constitutionValue, _intelligenceValue, _wisdomValue, _charismaValue, _strengthMod, _dexterityMod, _constitutionMod, _intelligenceMod, _wisdomMod, _charismaMod
    public ResultPanel(Character c){
           ^
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ResultPanel.java:25: error: [method.invocation] call to loadPanel() not allowed on the given receiver.
        loadPanel();
                 ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull ResultPanel
  required: @Initialized @NonNull ResultPanel
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ResultPanel.java:26: error: [method.invocation] call to setupPanel() not allowed on the given receiver.
        setupPanel();
                  ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull ResultPanel
  required: @Initialized @NonNull ResultPanel
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ResultPanel.java:27: error: [method.invocation] call to attachListeners() not allowed on the given receiver.
        attachListeners();
                       ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull ResultPanel
  required: @Initialized @NonNull ResultPanel
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/MainInterface.java:23: error: [method.invocation] call to setupFrame() not allowed on the given receiver.
        setupFrame();
                  ^
  found   : @UnderInitialization(dnd.attributegui.ui.MainInterface.class) @NonNull MainInterface
  required: @Initialized @NonNull MainInterface
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/MainInterface.java:24: error: [method.invocation] call to loadFrame() not allowed on the given receiver.
        loadFrame();
                 ^
  found   : @UnderInitialization(dnd.attributegui.ui.MainInterface.class) @NonNull MainInterface
  required: @Initialized @NonNull MainInterface
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/MainInterface.java:25: error: [method.invocation] call to pack() not allowed on the given receiver.
        pack();
            ^
  found   : @UnderInitialization(dnd.attributegui.ui.MainInterface.class) @NonNull Window
  required: @Initialized @NonNull Window
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/GeneratePanel.java:23: error: [initialization.fields.uninitialized] the constructor does not initialize fields: _button
    public GeneratePanel(Character c) {
           ^
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/GeneratePanel.java:25: error: [method.invocation] call to loadPanel() not allowed on the given receiver.
        loadPanel();
                 ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull GeneratePanel
  required: @Initialized @NonNull GeneratePanel
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/GeneratePanel.java:26: error: [method.invocation] call to setupPanel() not allowed on the given receiver.
        setupPanel();
                  ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull GeneratePanel
  required: @Initialized @NonNull GeneratePanel
../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/GeneratePanel.java:27: error: [method.invocation] call to attachListeners() not allowed on the given receiver.
        attachListeners();
                       ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull GeneratePanel
  required: @Initialized @NonNull GeneratePanel
Note: ../original/urla67b38dd7b_Coolhand2_DnD_AttributeGui_tgz-pJ8-dnd_attributegui_DnDAttributeGuiJ8/src/dnd/attributegui/ui/ChoicePanel.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
17 errors
